--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "dev": "webpack-dev-server --open --config ./webpackConfigs/config.dev.js --mode development"
+    "dev": "webpack-dev-server --open --config ./webpackConfigs/config.dev.js --mode development",
+    "demo": "webpack --config ./webpackConfigs/config.demo.js --mode production"
   },
   "repository": "https://github.com/devblazer/mamamoneyTest",
   "author": "Ashley Roux",
@@ -42,13 +43,9 @@
   },
   "dependencies": {
     "fetch-retry": "^2.2.2",
-    "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "rect": "^1.2.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2"
+    "react-dom": "^16.8.6"
   }
 }
